--- a/Thanks
+++ b/Thanks
@@ -35,6 +35,10 @@ Bernie Bright <bbright@c031.aone.net.au>
   Many C++ style, usage, and implimentation improvements.
 
 
+Bernhard H. Buckel <buckel@wmad95.mathematik.uni-wuerzburg.de>
+  Contributed the README.Linux
+
+
 Gene Buckle <geneb@nwlink.com>
   Gene has done a lot of work getting FG to compile with the MSVC++
   compiler.  Also, he has pushed, proded, and bugged me endlessly to
