--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,25 @@ New in 0.53
   - Created a new directory Simulator/Airports/ to handle airport data 
     specific tasks 
   - Created Simulator/Object/ to handle basic rendering objects
+* Panel code update from Friedemann Reinhard (use --enable-panel to activate)
+* Contributions from Bernie Bright
+  - Created some new classes to enable pointers-to-functions and
+    pointers-to-class-methods to be treated like objects.  These objects
+    can be registered with fgEVENT_MGR.
+  - File "Include/fg_callback.hxx" contains the callback class defns.
+  - Modified fgEVENT and fgEVENT_MGR to use the callback classes.  Also
+    some minor tweaks to STL usage.
+  - Added file "Include/fg_stl_config.h" to deal with STL portability
+    issues.  Added an initial config for egcs (and probably gcc-2.8.x).
+    Don't have access to Visual C++ so I've left that for someone else.
+  - This file is influenced by the stl_config.h file delivered with egcs.
+  - Added "Include/auto_ptr.hxx" which contains an implementation of the
+    STL auto_ptr class which is not provided in all STL implementations
+    and is needed to use the callback classes.
+  - Deleted fgLightUpdate() which was just a wrapper to call
+    fgLIGHT::Update().
+  - Modified fg_init.cxx to register two method callbacks in place of the
+    old wrapper functions.
 
 New in 0.52
 * Stars added in 8 stages as sky gets darker for a smoother more realistic
