--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ New in 0.54
   fragment being created for every tile.
 * Bug fixed that caused scenery generation to go bad (misplaced fclose on an
   invalid file descriptor.)
+* Code changes to support g++ 2.7 STL (from Bernie Bright)
 
 New in 0.53
 * Some initial "GameGLUT" support contributed by Gary R. Van Sickle
