--- a/Thanks
+++ b/Thanks
@@ -36,6 +36,10 @@ Paul Bleisch <pbleisch@acm.org>
   system.
 
 
+Jim Brennan <jjb@foothill.net>
+  Provided a big chunk of online space to store USA scenery for Flight Gear.
+
+
 Bernie Bright <bbright@c031.aone.net.au>
   Many C++ style, usage, and implimentation improvements.
 
@@ -139,6 +143,10 @@ Petter Reinholdtsen <pere@games.no>
   This should streamline and standardize the build process for all
   Unix-like platforms.  It should have little effect on IDE type 
   environments since the don't use the Unix make system.
+
+
+William Riley <riley@technologist.com>
+  Contributed code to add "brakes".
 
 
 Paul Schlyter <pausch@saaf.se>.  Mr. Schlyter provided Durk Talsma with 
