--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,9 @@ New in 0.55
 * Added an altitude hold module to the autopilot.  Lock your current altitude
   with "ctrl-a", "cntr-a" again will deactivate.  (Also lock your current 
   heading with "ctrl-h", and again to deactivate.)
+* Added a terrain following module ... "ctrl-t" to activate.
+* Added an autothrottle ... "ctrl-s" to activate.
+* Fixes so that terrain tools will work in windoze.
 
 New in 0.54
 * Implimented audio envelopes so that pitch of engine changes with throttle
